--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
     "better-auth": "^1.3.7",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "zod": "^3.25.0-beta.20250519T094321"
+    "zod": "^4.1.5"
   }
 }
