--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@dodopayments/express": "^0.1.3",
     "@prisma/client": "^6.15.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "better-auth": "^1.3.7",
     "cors": "^2.8.5",
+    "dodopayments": "^1.52.3",
     "express": "^5.1.0",
     "zod": "^4.1.5"
   }
