--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,8 @@ AWS_ACCESS_KEY_ID=your_aws_access_key_id_here
 AWS_SECRET_ACCESS_KEY=your_aws_secret_access_key_here
 AWS_REGION=af-south-1
 S3_BUCKET=your_s3_bucket_name_here
+
+
+
+DODO_PAYMENTS_API_KEY=4N1mn3Xw3PyWP2i3.jojDqcogDyiutZAbDWBjbIosS28hbreQwUC42BkmxWSLcYTs
+DODO_PAYMENTS_WEBHOOK_SECRET=whsec_zzYPVNxxesmJM8SkJLWZrwLDBoxCkFjK
