--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
     "typescript": "^5"
   },
   "dependencies": {
-    "@dodopayments/express": "^0.1.3",
+    "@dodopayments/better-auth": "^1.2.0",
     "@prisma/client": "^6.16.2",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
-    "better-auth": "^1.3.7",
+    "better-auth": "^1.3.24",
     "cors": "^2.8.5",
-    "dodopayments": "^1.52.3",
+    "dodopayments": "^2.1.1",
     "express": "^5.1.0",
-    "zod": "^4.1.5"
+    "zod": "4.1.5"
   }
 }
